--- a/index1.html
+++ b/index1.html
@@ -29,7 +29,7 @@
     <header>
       <nav class="navbar navbar-expand-lg bg-white px-4 border-bottom fixed-top">
         <div class="container-fluid">
-          <a class="navbar-brand fs-2" href="#">Techno-<span class="text-primary ">web</span></a>
+          <a class="navbar-brand fs-2" href="#">Techno-<span class="text-primary ">webb</span></a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
